# levers-fullstack-ai-task

./: AI_USAGE.md  CLAUDE.md  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: chat.py  config.py  documents.py  ingest.py
backend/app/core/: config.py  prompt_store.py
backend/app/models/: schemas.py
backend/app/services/: llm_client.py  rag_engine.py  structured_store.py  vector_store.py
backend/app/utils/: chunking.py
backend/tests/: conftest.py  test_api.py  test_chunking.py  test_prompt_store.py  test_rag_engine.py  test_stores.py
docs/ai/: api-spec.md  rag-plan-and-execute-1.md  rag-workflow.md
docs/claude_code/: 1_create_min_be.md
frontend/: README.md  package-lock.json  package.json  vitest.config.ts
frontend/__tests__/components/: ChatMessage.test.tsx  DocumentPanel.test.tsx  ModelSelector.test.tsx  StreamToggle.test.tsx
frontend/__tests__/lib/: api.test.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: ChatInput.tsx  ChatMessage.tsx  DocumentPanel.tsx  EmptyState.tsx  ModelSelector.tsx  StreamToggle.tsx  SystemPromptEditor.tsx
frontend/hooks/: useChat.ts  useDocuments.ts  useModels.ts
frontend/lib/: api.ts
frontend/types/: index.ts
